added navbar and pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+	<%= link_to "Bridal Party", bridalparty_path %>
+	<%= link_to "Love Story", lovestory_path %>
+	<%= link_to "Wedding Registration", registration_path %>
+	<%= link_to "RSVP", onlinersvp_path %>
+	<%= link_to "Accomodations", accomodations_path %>
+	<%= link_to "Things To Do", thingstodo_path %>
+	<%= link_to "Wedding Events", weddingevents_path %>
 <%= yield %>
 
 </body>
