edited home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,14 @@
-<h1>Home</h1>
+<div class="row">
+	<center>
+	<div class="col-md-8">
+		<h2>
+			<span class="glyphicon glyphicon-heart"></span>Love Story
+		</h2>
+	</div>
+	<div class="col-md-4">
+		<h2>
+			Bridal Party
+		</h2>
+	</div>
+	</center>
+</div>
