--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Glass+Antiqua);
+
 body
 {
 	background-image: image-url('background/tileable_wood_texture.png');
@@ -8,7 +10,39 @@ body
 {
 	background-image: image-url('header/header.jpg');
 	height: 300px;
+	font-family: 'Glass Antiqua', Helvetica, Arial, sans-serif;
 }
+
+.col-md-8
+{
+	border-style: dashed;
+	border-width: 2px;
+	border-radius: 5px;
+	h2
+	{
+		font-family: 'Glass Antiqua', Helvetica, Arial, sans-serif;	
+	}
+}
+
+.col-md-4
+{
+	h2
+	{
+		font-family: 'Glass Antiqua', Helvetica, Arial, sans-serif;	
+	}
+}
+
+.row
+{
+	margin-left: 0px !important;
+	margin-right: 0px !important; 
+}
+
+.glyphicon
+{
+	padding-right: 10px;
+}
+
 
 $jumbotron-color: #ffffff;
 $container-lg: 800px;
