--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,7 @@
 <div class="jumbotron">
 	<h1>Ashley & Michael</h1>
+  <h2>12-13-14</h2>
+  <h2>Raleigh, North Carolina </h2>
 </div>
 <nav class="navbar navbar-default" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
