--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,11 +4,31 @@
 		<h2>
 			<span class="glyphicon glyphicon-heart"></span>Love Story
 		</h2>
+		<%= image_tag("/assets/homepage/love2.jpg", class: "img-responsive img-rounded") %>
+		<p>
+			Ashley and mike are in love for a bunch of reasons...these are the reasons. They both love boogey, they love to eat. They fart alot. They both run marathons and stuff, they like to make money, they don't like bills, they both like to drink too much Cooper's Hawk Wine, they both don't like the cold weather, they both would rather sit at home and watch tv than to go out....continue on with explanation about why they love each other...
+		</p>
 	</div>
 	<div class="col-md-4">
 		<h2>
 			Bridal Party
 		</h2>
+		<h3>Brittany</h3>
+		<p>This should be information about Brittany</p>
+		<%= image_tag("/assets/homepage/brit.jpg", class: "img-circle") %>
+
+		<h3>Melissa</h3>
+		<p>This should be information about Melissa</p>
+		<%= image_tag("/assets/homepage/brit.jpg", class: "img-circle") %>
+
+		<h3>Becky</h3>
+		<p>This should be information about Becky</p>
+		<%= image_tag("/assets/homepage/brit.jpg", class: "img-circle") %>
+
+		<h3>Kathy</h3>
+		<p>This should be information about Kathy </p>
+		<%= image_tag("/assets/homepage/brit.jpg", class: "img-circle") %>
+
 	</div>
 	</center>
 </div>
