--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_include_tag "countdown.js" %>
+
 <div class="row">
 	<center>
 	<div class="col-md-8">
@@ -6,28 +8,55 @@
 		</h2>
 		<%= image_tag("homepage/love2.jpg", class: "img-responsive img-rounded") %>
 		<p>
-			Ashley and mike are in love for a bunch of reasons...these are the reasons. They both love boogey, they love to eat. They fart alot. They both run marathons and stuff, they like to make money, they don't like bills, they both like to drink too much Cooper's Hawk Wine, they both don't like the cold weather, they both would rather sit at home and watch tv than to go out....continue on with explanation about why they love each other...
+			After graduating from the esteemed Purdue University and leaving the Southside of Chicago Ashley began a rotational program with Merck.  Growing sick of the cold weather, she took a rotation down south at the company's Durham, NC site. Little did she know that  2 months later she'd meet the man of her dreams.
+			<br><br>
+			Michael had begun working at the Merck Durham site a year prior after also leaving the North for a better climate. Although neither remember anything from the day but lots of tequila, they first met on Cinco de Mayo at a mutual friends. Following that, they locked eyes at a Zac Brown Band concert (literally when mike asked her to remove her sunglasses to confirm whether or not he knew her).  At first, they both couldn't stand each other, but after a few kickball games, they couldn't stop talking to each other. After a string of unpaid dates (which mike denies) they began dating over the next year. They grew closer as they realized theyhadsomuchin common: family focused, running, the beach, netflix marathons, Boogey and drinking too much Cooper's Hawk wine with Big Lor.
+			<br><br>
+			After a year of begging Mike FINALLY decided to take Ashley to Biltmore. Little did Ashley know that Mike had something special planned.  Following  a rocky morning full of squeaky windshieldwipers and wrong bagels, the sun came out upon their arrival tovBiltmore.  They rushed through the wine tourand lunch as Mike wanted Ashley to gettoopen herbirthday andChristmas presents before their time to enter the estate.  After flying through thepresents she pciked out for herself Mike told her he had onemorespecial present. Upon opening an empty jewelry box Ashley looked up togibe mike an eaerful and sawhim down on one knee. She said yes, and now on 12-13-14 you will get to see them both say "I do"!
 		</p>
 	</div>
 	<div class="col-md-4">
-		<h2>
-			Bridal Party
-		</h2>
-		<h3>Brittany</h3>
-		<p>This should be information about Brittany</p>
-		<%= image_tag("homepage/brit.jpg", class: "img-circle") %>
+		<div class="row">
+			<h2>Days Until Wedding</h2>
+			<h2>
+				<span class="glyphicon glyphicon-time"></span>
+			</h2>
+			<h4><span id="countdown"></span></h4>
+		</div>
 
-		<h3>Melissa</h3>
-		<p>This should be information about Melissa</p>
-		<%= image_tag("homepage/brit.jpg", class: "img-circle") %>
+		<div class="row">
+			<h2>
+				 Wedding
+			</h2>
+			<h2>
+				<span class="glyphicon glyphicon-bell"></span>
+			</h2>
+			<h4>
+				St. Francis of Assisi Church
+			</h4>
+			<p>
+				11401 Leesville Rd<br>
+				Raleigh, NC 27613
+			</p>
+			<%= image_tag("homepage/church.jpg", class: "img-responsive img-rounded") %>
+		</div>
 
-		<h3>Becky</h3>
-		<p>This should be information about Becky</p>
-		<%= image_tag("homepage/brit.jpg", class: "img-circle") %>
-
-		<h3>Kathy</h3>
-		<p>This should be information about Kathy </p>
-		<%= image_tag("homepage/brit.jpg", class: "img-circle") %>
+		<div class="row">
+			<h2>
+				Reception
+			</h2>
+			<h2>
+			<span class="glyphicon glyphicon-cutlery"></span>
+			</h2>
+			<h4>
+				North Carolina Museum of Natural Sciences
+			</h4>
+			<p>
+				11 West Jones Street<br>
+				Raleigh, NC 27601
+			</p>
+			<%= image_tag("homepage/dino.jpg", class: "img-responsive img-rounded") %>
+		</div>
 
 	</div>
 	</center>
