--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,7 +12,7 @@
 			<br><br>
 			Michael had begun working at the Merck Durham site a year prior after also leaving the North for a better climate. Although neither remember anything from the day but lots of tequila, they first met on Cinco de Mayo at a mutual friends. Following that, they locked eyes at a Zac Brown Band concert (literally when mike asked her to remove her sunglasses to confirm whether or not he knew her).  At first, they both couldn't stand each other, but after a few kickball games, they couldn't stop talking to each other. After a string of unpaid dates (which mike denies) they began dating over the next year. They grew closer as they realized theyhadsomuchin common: family focused, running, the beach, netflix marathons, Boogey and drinking too much Cooper's Hawk wine with Big Lor.
 			<br><br>
-			After a year of begging Mike FINALLY decided to take Ashley to Biltmore. Little did Ashley know that Mike had something special planned.  Following  a rocky morning full of squeaky windshieldwipers and wrong bagels, the sun came out upon their arrival tovBiltmore.  They rushed through the wine tourand lunch as Mike wanted Ashley to gettoopen herbirthday andChristmas presents before their time to enter the estate.  After flying through thepresents she pciked out for herself Mike told her he had onemorespecial present. Upon opening an empty jewelry box Ashley looked up togibe mike an eaerful and sawhim down on one knee. She said yes, and now on 12-13-14 you will get to see them both say "I do"!
+			After a year of begging Mike FINALLY decided to take Ashley to Biltmore. Little did Ashley know that Mike had something special planned.  Following  a rocky morning full of squeaky windshieldwipers and wrong bagels, the sun came out upon their arrival to Biltmore.  They rushed through the wine tourand lunch as Mike wanted Ashley to gettoopen herbirthday andChristmas presents before their time to enter the estate.  After flying through thepresents she pciked out for herself Mike told her he had onemorespecial present. Upon opening an empty jewelry box Ashley looked up togibe mike an eaerful and sawhim down on one knee. She said yes, and now on 12-13-14 you will get to see them both say "I do"!
 		</p>
 	</div>
 	<div class="col-md-4">
@@ -38,7 +38,7 @@
 				11401 Leesville Rd<br>
 				Raleigh, NC 27613
 			</p>
-			<%= image_tag("homepage/church.jpg", class: "img-responsive img-rounded") %>
+			<%= image_tag("homepage/church.jpg", class: "img-responsive img-rounded") %><br> 
 		</div>
 
 		<div class="row">
@@ -56,6 +56,7 @@
 				Raleigh, NC 27601
 			</p>
 			<%= image_tag("homepage/dino.jpg", class: "img-responsive img-rounded") %>
+			<br>
 		</div>
 
 	</div>
