--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 	<div class="container">
 		<%= render 'layouts/header' %>
 		<%= yield %>
+	<footer><center><span class="glyphicon glyphicon-heart-empty" ></span>Designed with love by Brittany Vacchiano</center></footer>
 	</div>
 
 </body>
