--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 	<center>
 	<div class="col-md-8">
 		<h2>
-			<span class="glyphicon glyphicon-heart"></span>Love Story
+			<span class="glyphicon glyphicon-heart gold"></span>Love Story
 		</h2>
 		<%= image_tag("homepage/love2.jpg", class: "img-responsive img-rounded") %>
 		<p>
@@ -19,7 +19,7 @@
 		<div class="row">
 			<h2>Days Until Wedding</h2>
 			<h2>
-				<span class="glyphicon glyphicon-time"></span>
+				<span class="glyphicon glyphicon-time gold"></span>
 			</h2>
 			<h4><span id="countdown"></span></h4>
 		</div>
@@ -29,7 +29,7 @@
 				 Wedding
 			</h2>
 			<h2>
-				<span class="glyphicon glyphicon-bell"></span>
+				<span class="glyphicon glyphicon-bell gold"></span>
 			</h2>
 			<h4>
 				St. Francis of Assisi Church
@@ -46,7 +46,7 @@
 				Reception
 			</h2>
 			<h2>
-			<span class="glyphicon glyphicon-cutlery"></span>
+			<span class="glyphicon glyphicon-cutlery gold"></span>
 			</h2>
 			<h4>
 				North Carolina Museum of Natural Sciences
