made the bridal party page and changed rsvp path

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,7 +20,7 @@
     <ul class="nav navbar-nav">
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "Registration", registration_path %></li>
-      <li><%= link_to "RSVP", onlinersvp_path %></li>
+      <li><%= link_to "RSVP", rsvp_path %></li>
       <li><%= link_to "Accomodations", accomodations_path %></li>
       <li><%= link_to "Things To Do", thingstodo_path %></li>
       <li><%= link_to "Wedding Events", weddingevents_path %></li>
