added more people to bridal party page

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -109,6 +109,12 @@ li
 	padding-right: 10px;
 }
 
+#bridalpic
+{
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
 
 $jumbotron-color: #ffffff;
 $container-lg: 800px;
