--- a/app/views/pages/bridalparty.html.erb
+++ b/app/views/pages/bridalparty.html.erb
@@ -1,62 +1,75 @@
 <div class="row">
-	<div class="col-md-4">
+	<div class="col-xs-6 col-md-4">
 		<center>
-			<%= image_tag("bridalparty/katie.jpg", class: "img-responsive img-circle") %>
+			<%= image_tag("bridalparty/katie.jpg", class: "img-responsive img-circle", id: "bridalpic") %>
 		</center>
 	</div>
-	<div class="col-md-8">
+	<div class="col-xs-12 col-md-8">
 		<center>
 			<h2>Katie Athern</h2>
 		</center>
-		<p>
 			<ul>
 				<li>From Chicago, IL</li>
 				<li>Besides being a fellow Josh Hartnett enthusiast, Ashley and Katie attended every school together, from grammar school to college. They were also teammates on the famed St. Symphorosa 6th grade basketball championship team</li>
 				<li>She met Mike last year when Ashley introduced him to her best friends</li>
 				<li>She is excited to see one of her oldest friends get married</li>
 			</ul>
-		</p>
 	</div>
 </div>
 
 <div class="row">
-	<div class="col-md-8">
+	<div class="col-xs-12 col-md-8">
 		<center>
 			<h2>Jacqui Gillis</h2>
 		</center>
-		<p>
 			<ul>
 				<li>From Chicago, IL</li>
 				<li>Ashley and Jacqui met in first grade and their friendship really blossomed in 4th grade when they were told that they had the two worst handwriting in the class.</li>
 				<li>Jacqui met Mike around Christmas and knew he was a keeper after he had no problem having a dance off in an ugly Christmas sweater inside Lawlor's Bar.</li>
 				<li>Jacqui is excited for the wedding because it is one of her best friends getting married and she's excited to embarrass Ashley at the wedding.</li>
 			</ul>
-		</p>
 	</div>
-	<div class="col-md-4">
+	<div class="col-xs-6 col-md-4">
 		<center>
-			<%= image_tag("bridalparty/jacqui.jpg", class: "img-responsive img-circle") %>
+			<%= image_tag("bridalparty/jacqui.jpg", class: "img-responsive img-circle", id: "bridalpic") %>
 		</center>
 	</div>
 </div>
 
 <div class="row">
-	<div class="col-md-4">
+	<div class="col-xs-6 col-md-4">
 		<center>
-			<%= image_tag("bridalparty/jacqui.jpg", class: "img-responsive img-circle") %>
+			<%= image_tag("bridalparty/elyse.jpg", class: "img-responsive img-circle", id: "bridalpic") %>
 		</center>
 	</div>
-	<div class="col-md-8">
+	<div class="col-xs-12 col-md-8">
 		<center>
-			<h2>Elyse Swinski</h2>
+			<h2>Elyse Siwinski</h2>
 		</center>
-		<p>
 			<ul>
 				<li>From Chicago, IL</li>
 				<li>Ashley and Jacqui met in first grade and their friendship really blossomed in 4th grade when they were told that they had the two worst handwriting in the class.</li>
 				<li>Jacqui met Mike around Christmas and knew he was a keeper after he had no problem having a dance off in an ugly Christmas sweater inside Lawlor's Bar.</li>
 				<li>Jacqui is excited for the wedding because it is one of her best friends getting married and she's excited to embarrass Ashley at the wedding.</li>
 			</ul>
-		</p>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-xs-12 col-md-8">
+		<center>
+			<h2>Kathy Suarez</h2>
+		</center>
+			<ul>
+				<li>From Yorktown Heights, New York</li>
+				<li>Ashley and Jacqui met in first grade and their friendship really blossomed in 4th grade when they were told that they had the two worst handwriting in the class.</li>
+				<li>Jacqui met Mike around Christmas and knew he was a keeper after he had no problem having a dance off in an ugly Christmas sweater inside Lawlor's Bar.</li>
+				<li>Jacqui is excited for the wedding because it is one of her best friends getting married and she's excited to embarrass Ashley at the wedding.</li>
+			</ul>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<center>
+			<%= image_tag("bridalparty/kathy.jpg", class: "img-responsive img-circle", id: "bridalpic") %>
+		</center>
 	</div>
 </div>
