added active hovers

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -121,6 +121,7 @@ $container-lg: 800px;
 $container-tablet: 670px;
 $container-md: 800px;
 $navbar-default-bg: #FFFFF0;
+$component-active-color: #000000;
 
 
 @import 'bootstrap';
