--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -129,6 +129,21 @@ footer
 	}
 }
 
+ul
+{
+	padding-left: 20px;
+}
+
+.nav > li > a
+{
+	padding: 12px 0px 0px 25px !important;
+}
+
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus
+{
+	background-color: transparent !important;
+	font-weight: bold;
+}
 
 $jumbotron-color: #ffffff;
 $container-lg: 800px;
