added melissa and brittany to bridal party page

--- a/app/views/pages/bridalparty.html.erb
+++ b/app/views/pages/bridalparty.html.erb
@@ -1,10 +1,50 @@
 <div class="row">
-	<div class="col-xs-6 col-md-4">
+	<div class="col-md-4">
+		<center>
+			<%= image_tag("bridalparty/melissa.jpg", class: "img-responsive img-circle", id: "bridalpic") %>
+		</center>
+	</div>
+	<div class="col-md-8">
+		<center>
+			<h2>Melissa Vacchiano</h2>
+			<h4>Maid Of Honor #1</h4>
+		</center>
+			<ul>
+				<li>From Chicago, IL</li>
+				<li>Melissa and Ashley became best friends after Melissa got over the fact that she wasn't going to be the only child in the family any more.</li>
+				<li>Brittany met Mike during her Junior year of high school when she visited Ashley for the first time in North Carolina. She knew Mike was a keeper when he met the whole Vacchiano/Stankek family for Christmas - a giant feat for any newcomer at family parties.</li>
+				<li>Brittany is excited about the wedding because she can embarass her sister during the Maid Of Honor speech.</li>
+			</ul>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-md-8">
+		<center>
+			<h2>Brittany Vacchiano</h2>
+			<h4>Maid Of Honor #2</h4>
+		</center>
+			<ul>
+				<li>From Chicago, IL</li>
+				<li>Brittany and Ashley were best friends from the minute Brittany popped out of the womb. After sharing a bedroom with Ashley for over 5 years, Ashley and Brittany became inseperable best friends. Ashley and Brittany went to the same grammar schools, high schools, and colleges aligning them in both sisterhood and school spirit.</li>
+				<li>Brittany met Mike during her Junior year of high school when she visited Ashley for the first time in North Carolina. She knew Mike was a keeper when he met the whole Vacchiano/Stankek family for Christmas - a giant feat for any newcomer at family parties.</li>
+				<li>Brittany is excited about the wedding because she can embarass her sister during the Maid Of Honor speech.</li>
+			</ul>
+	</div>
+	<div class="col-md-4">
+		<center>
+			<%= image_tag("bridalparty/brittany.jpg", class: "img-responsive img-circle", id: "bridalpic") %>
+		</center>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-md-4">
 		<center>
 			<%= image_tag("bridalparty/katie.jpg", class: "img-responsive img-circle", id: "bridalpic") %>
 		</center>
 	</div>
-	<div class="col-xs-12 col-md-8">
+	<div class="col-md-8">
 		<center>
 			<h2>Katie Athern</h2>
 		</center>
@@ -18,7 +58,7 @@
 </div>
 
 <div class="row">
-	<div class="col-xs-12 col-md-8">
+	<div class="col-md-8">
 		<center>
 			<h2>Jacqui Gillis</h2>
 		</center>
@@ -26,10 +66,10 @@
 				<li>From Chicago, IL</li>
 				<li>Ashley and Jacqui met in first grade and their friendship really blossomed in 4th grade when they were told that they had the two worst handwriting in the class.</li>
 				<li>Jacqui met Mike around Christmas and knew he was a keeper after he had no problem having a dance off in an ugly Christmas sweater inside Lawlor's Bar.</li>
-				<li>Jacqui is excited for the wedding because it is one of her best friends getting married and she's excited to embarrass Ashley at the wedding.</li>
+				<li>Jacqui is excited for the wedding because it is one of her best friends getting married.</li>
 			</ul>
 	</div>
-	<div class="col-xs-6 col-md-4">
+	<div class="col-md-4">
 		<center>
 			<%= image_tag("bridalparty/jacqui.jpg", class: "img-responsive img-circle", id: "bridalpic") %>
 		</center>
@@ -37,12 +77,12 @@
 </div>
 
 <div class="row">
-	<div class="col-xs-6 col-md-4">
+	<div class="col-md-4">
 		<center>
 			<%= image_tag("bridalparty/elyse.jpg", class: "img-responsive img-circle", id: "bridalpic") %>
 		</center>
 	</div>
-	<div class="col-xs-12 col-md-8">
+	<div class="col-md-8">
 		<center>
 			<h2>Elyse Siwinski</h2>
 		</center>
@@ -56,7 +96,7 @@
 </div>
 
 <div class="row">
-	<div class="col-xs-12 col-md-8">
+	<div class="col-md-8">
 		<center>
 			<h2>Kathy Suarez</h2>
 		</center>
@@ -67,7 +107,7 @@
 				<li>Jacqui is excited for the wedding because it is one of her best friends getting married and she's excited to embarrass Ashley at the wedding.</li>
 			</ul>
 	</div>
-	<div class="col-xs-6 col-md-4">
+	<div class="col-md-4">
 		<center>
 			<%= image_tag("bridalparty/kathy.jpg", class: "img-responsive img-circle", id: "bridalpic") %>
 		</center>
