almost done with bridal party page

--- a/app/views/pages/bridalparty.html.erb
+++ b/app/views/pages/bridalparty.html.erb
@@ -12,8 +12,8 @@
 			<ul>
 				<li>From Chicago, IL</li>
 				<li>Melissa and Ashley became best friends after Melissa got over the fact that she wasn't going to be the only child in the family any more.</li>
-				<li>Brittany met Mike during her Junior year of high school when she visited Ashley for the first time in North Carolina. She knew Mike was a keeper when he met the whole Vacchiano/Stankek family for Christmas - a giant feat for any newcomer at family parties.</li>
-				<li>Brittany is excited about the wedding because she can embarass her sister during the Maid Of Honor speech.</li>
+				<li>Melissa met Mike for the first time when he came to visit Chicago for the first time. She was immediately impressed by his drinking skills.</li>
+				<li>Melissa is excited about the wedding because she gets to celebrate a special day with her sister.</li>
 			</ul>
 	</div>
 </div>
@@ -102,9 +102,9 @@
 		</center>
 			<ul>
 				<li>From Yorktown Heights, New York</li>
-				<li>Ashley and Jacqui met in first grade and their friendship really blossomed in 4th grade when they were told that they had the two worst handwriting in the class.</li>
-				<li>Jacqui met Mike around Christmas and knew he was a keeper after he had no problem having a dance off in an ugly Christmas sweater inside Lawlor's Bar.</li>
-				<li>Jacqui is excited for the wedding because it is one of her best friends getting married and she's excited to embarrass Ashley at the wedding.</li>
+				<li>Kathy and Mike have been best friends since childhood - since they are siblings.</li>
+				<li>Kathy met Ashley after Ashley moved into the house with Mike. Kathy is the best roommate to both.</li>
+				<li>Kathy loves both Michael and Ashley and is excited for them to tie the knot! She also thinks that the natural science museum is pretty awesome and is excited to celebrate the reception at such a magnificent place.</li>
 			</ul>
 	</div>
 	<div class="col-md-4">
