added new headers on each page

--- a/app/views/pages/bridalparty.html.erb
+++ b/app/views/pages/bridalparty.html.erb
@@ -1,4 +1,8 @@
 <div class="row">
+	<center><h1><span class="glyphicon glyphicon-glass gold"></span>Bridal Party</h1></center>
+</div>
+
+<div class="row">
 	<div class="col-md-4">
 		<center>
 			<%= image_tag("bridalparty/melissa.jpg", class: "img-responsive img-circle", id: "bridalpic") %>
