--- a/app/views/pages/registration.html.erb
+++ b/app/views/pages/registration.html.erb
@@ -1,1 +1,3 @@
-<h1>Registration</h1>
+<div class="row">
+	<center><h1><span class="glyphicon glyphicon-gift gold"></span>Registration</h1></center>
+</div>
