--- a/app/views/pages/weddingevents.html.erb
+++ b/app/views/pages/weddingevents.html.erb
@@ -1,1 +1,3 @@
-<h1>Wedding Events</h1>
+<div class="row">
+	<center><h1><span class="glyphicon glyphicon-calendar gold"></span>Wedding Events</h1></center>
+</div>
