--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -102,6 +102,13 @@ li
 	margin-left: 0px !important;
 	margin-right: 0px !important;
 	margin-bottom: 15px;
+	h1
+	{
+		margin-top:0px;
+		margin-bottom: 0px;
+		font-family: 'Glass Antiqua', Helvetica, Arial, sans-serif;
+		font-size: 40px;
+	}
 }
 
 .glyphicon
