--- a/app/views/pages/accomodations.html.erb
+++ b/app/views/pages/accomodations.html.erb
@@ -1,1 +1,3 @@
-<h1>Accomodations</h1>
+<div class="row">
+	<center><h1><span class="glyphicon glyphicon-home gold"></span>Accomodations</h1></center>
+</div>
