--- a/app/views/pages/thingstodo.html.erb
+++ b/app/views/pages/thingstodo.html.erb
@@ -1,1 +1,3 @@
-<h1>Things To Do</h1>
+<div class="row">
+	<center><h1><span class="glyphicon glyphicon-map-marker gold"></span>Things To Do</h1></center>
+</div>
