--- a/app/views/pages/registration.html.erb
+++ b/app/views/pages/registration.html.erb
@@ -1,3 +1,13 @@
 <div class="row">
 	<center><h1><span class="glyphicon glyphicon-gift gold"></span>Registration</h1></center>
 </div>
+
+<div class="row">
+	<div class="col-md-5">
+		<h2><center>Target</center></h2>
+	</div>
+
+	<div class="col-md-5 col-md-offset-2">
+		<h2><center>Bed Bath & Beyond</center></h2>
+	</div>
+</div>
