--- a/app/views/pages/bridalparty.html.erb
+++ b/app/views/pages/bridalparty.html.erb
@@ -2,7 +2,7 @@
 	<center><h1><span class="glyphicon glyphicon-glass gold"></span>Bridal Party</h1></center>
 </div>
 
-<div class="row">
+<div id="melissa" class="row">
 	<div class="col-md-4">
 		<center>
 			<%= image_tag("bridalparty/melissa.jpg", class: "img-responsive img-circle", id: "bridalpic") %>
@@ -22,7 +22,12 @@
 	</div>
 </div>
 
-<div class="row">
+<div id="brittany" class="row">
+	<div class="col-md-4">
+		<center>
+			<%= image_tag("bridalparty/brittany.jpg", class: "img-responsive img-circle", id: "bridalpic") %>
+		</center>
+	</div>
 	<div class="col-md-8">
 		<center>
 			<h2>Brittany Vacchiano</h2>
@@ -35,15 +40,11 @@
 				<li>Brittany is excited about the wedding because she can embarass her sister during the Maid Of Honor speech.</li>
 			</ul>
 	</div>
-	<div class="col-md-4">
-		<center>
-			<%= image_tag("bridalparty/brittany.jpg", class: "img-responsive img-circle", id: "bridalpic") %>
-		</center>
-	</div>
+
 </div>
 
 <div class="row">
-	<div class="col-md-4">
+	<div id="katie" class="col-md-4">
 		<center>
 			<%= image_tag("bridalparty/katie.jpg", class: "img-responsive img-circle", id: "bridalpic") %>
 		</center>
@@ -61,7 +62,12 @@
 	</div>
 </div>
 
-<div class="row">
+<div id="jacqui" class="row">
+	<div class="col-md-4">
+		<center>
+			<%= image_tag("bridalparty/jacqui.jpg", class: "img-responsive img-circle", id: "bridalpic") %>
+		</center>
+	</div>
 	<div class="col-md-8">
 		<center>
 			<h2>Jacqui Gillis</h2>
@@ -73,14 +79,9 @@
 				<li>Jacqui is excited for the wedding because it is one of her best friends getting married.</li>
 			</ul>
 	</div>
-	<div class="col-md-4">
-		<center>
-			<%= image_tag("bridalparty/jacqui.jpg", class: "img-responsive img-circle", id: "bridalpic") %>
-		</center>
-	</div>
 </div>
 
-<div class="row">
+<div id="elyse" class="row">
 	<div class="col-md-4">
 		<center>
 			<%= image_tag("bridalparty/elyse.jpg", class: "img-responsive img-circle", id: "bridalpic") %>
@@ -99,21 +100,21 @@
 	</div>
 </div>
 
-<div class="row">
-	<div class="col-md-8">
-		<center>
-			<h2>Kathy Suarez</h2>
-		</center>
-			<ul>
-				<li>From Yorktown Heights, New York</li>
-				<li>Kathy and Mike have been best friends since childhood - since they are siblings.</li>
-				<li>Kathy met Ashley after Ashley moved into the house with Mike. Kathy is the best roommate to both.</li>
-				<li>Kathy loves both Michael and Ashley and is excited for them to tie the knot! She also thinks that the natural science museum is pretty awesome and is excited to celebrate the reception at such a magnificent place.</li>
-			</ul>
-	</div>
+<div id="cathy" class="row">
 	<div class="col-md-4">
 		<center>
 			<%= image_tag("bridalparty/kathy.jpg", class: "img-responsive img-circle", id: "bridalpic") %>
 		</center>
+	</div>
+	<div class="col-md-8">
+		<center>
+			<h2>Cathy Suarez</h2>
+		</center>
+			<ul>
+				<li>From Yorktown Heights, New York</li>
+				<li>Cathy and Mike have been best friends since childhood - since they are siblings.</li>
+				<li>Cathy met Ashley after Ashley moved into the house with Mike. Kathy is the best roommate to both.</li>
+				<li>Cathy loves both Michael and Ashley and is excited for them to tie the knot! She also thinks that the natural science museum is pretty awesome and is excited to celebrate the reception at such a magnificent place.</li>
+			</ul>
 	</div>
 </div>
