edited jaqcuis stuff and removed old files

--- a/app/views/pages/bridalparty.html.erb
+++ b/app/views/pages/bridalparty.html.erb
@@ -74,9 +74,10 @@
 		</center>
 			<ul>
 				<li>From Chicago, IL</li>
-				<li>Ashley and Jacqui met in first grade and their friendship really blossomed in 4th grade when they were told that they had the two worst handwriting in the class.</li>
-				<li>Jacqui met Mike around Christmas and knew he was a keeper after he had no problem having a dance off in an ugly Christmas sweater inside Lawlor's Bar.</li>
-				<li>Jacqui is excited for the wedding because it is one of her best friends getting married.</li>
+				<li>Ashley and Jacqui met in first grade and their friendship really blossomed in 4th grade when they were told that they had the two worst handwriting in the class. </li>
+				<li>Jacqui met Mike around Christmas and knew he was a keeper after he had no problem having a dance off in an ugly Christmas sweater inside Lawlor's Bar. </li>
+				<li>Jacqui is excited for the wedding because it is one of her best friends getting married and she gets to embarass Ashley</li>
+				<li>Fun Fact:  Jacqui was a contestant on "Who Wants to Be a Millionare?"</li>
 			</ul>
 	</div>
 </div>
